src/objects/Yamaha_Australia_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used for Yamaha Australia vendor order export file.</description>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <description>Dealer’s Account Number with Yamaha. Max length is 6 characters.</description>
        <inlineHelpText>Dealer’s Account Number with Yamaha. Max length is 6 characters.</inlineHelpText>
        <label>Dealer Code</label> 
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Code__c</fullName>
        <description>Dealer Sales Representative. Max length is 3 characters.</description>
        <inlineHelpText>Dealer Sales Representative. Max length is 3 characters.</inlineHelpText>
        <label>Sales Person Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User Id is used to log on to YDC system. Max length is 10 characters.</description>
        <inlineHelpText>User Id is used to log on to YDC system. Max length is 10 characters.</inlineHelpText>
        <label>User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Yamaha Australia Config</label>
</CustomObject>